# classroom-notice-board-rest-clinet

./: README.md  pyproject.toml
playground/: play.ipynb  play_update_team.ipynb  restclinet.http
src/classroom_notice_board_rest_clinet/: main.py  restclient.py
src/classroom_notice_board_rest_clinet/toolbox/: extractor.py  makeup_artist.py
tests/: test_main.py  test_restclient.py
