[project]
name = "classroom-notice-board-rest-clinet"
version = "0.3.0"
description = "https://github.com/edu-data-mario/classroom-notice-board rest clinet"
authors = [
    {name = "dmario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "zmq>=0.0.0",
    "faker>=18.13.0",
]

[project.urls]
"Homepage" = "https://github.com/edu-data-mario/classroom-notice-board-rest-clinet"
"Bug Tracker" = "https://github.com/edu-data-mario/classroom-notice-board-rest-clinet/issues"

[project.scripts]
class-write-poster = 'classroom_notice_board_rest_clinet.main:write_poster'
class-show-data = 'classroom_notice_board_rest_clinet.main:show_dashboard_data'
